<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/frozen">

    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_noteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/noColor"
            android:text="@string/btn_noteList"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/name"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/noColor"
            android:text="@string/btn_save"
            android:textSize="20sp"
            android:textColor="@color/name"
            android:textAllCaps="false"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/title_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/main_edt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/colorText"
        android:gravity="start"/>



</LinearLayout>